Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18335

Qt Creator crashes when modifing the environment of a kit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.3.1
    • Qt Creator 4.3.0
    • None
    • Windows 7 x64
       MSVC2015 64bit
       Qt 5.9.0 64bit
       Qt Creator 4.3.1, MSVC2015 32bit

    Description

      When I have an environment set for the default kit, Qt Creator crashes as soon as I open a project.

      This is true even for projects that do not have a .pro.user file!

      I attached the environment I am using.

      Everything worked fine with the previous Creator of Qt 5.8!

      1   RaiseException                                                                                                                                    KERNELBASE                 0x7ffbe7259e08 
      2   _DestructExceptionObject                                                                                                                          VCRUNTIME140D              0x7ffbccfd46e3 
      3   _BuildCatchObjectHelper                                                                                                                           VCRUNTIME140D              0x7ffbccfd4f4e 
      4   RtlCaptureContext                                                                                                                                 ntdll                      0x7ffbea049613 
      5   QString::replace_helper                                                                                                                           qstring.cpp           2515 0x6cbf2aa6     
      6   QString::replace                                                                                                                                  qstring.cpp           2412 0x6cbedb7f     
      7   QString::replace                                                                                                                                  qstring.cpp           2394 0x6cbedbdd     
      8   Utils::Environment::modify                                                                                                                        environment.cpp       394  0x7ffbb3c99a5b 
      9   ProjectExplorer::EnvironmentKitInformation::addToEnvironment                                                                                      kitinformation.cpp    770  0x7ffb90504782 
      10  ProjectExplorer::Kit::addToEnvironment                                                                                                            kit.cpp               523  0x7ffb904eec36 
      11  QtSupport::QmlDumpTool::pathAndEnvironment                                                                                                        qmldumptool.cpp       111  0x7ffbb16b9633 
      12  QmlJSTools::Internal::ModelManager::defaultProjectInfoForProject                                                                                  qmljsmodelmanager.cpp 127  0x7ffbbc37a069 
      13  QmlJSTools::Internal::ModelManager::updateDefaultProjectInfo                                                                                      qmljsmodelmanager.cpp 277  0x7ffbbc37a153 
      14  QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__cdecl QmlJSTools::Internal::ModelManager:: *)(void) __ptr64>::call qobjectdefs_impl.h    136  0x7ffbbc3813fc 
      15  QtPrivate::FunctionPointer<void (__cdecl QmlJSTools::Internal::ModelManager:: *)(void) __ptr64>::call<QtPrivate::List<>,void>                     qobjectdefs_impl.h    170  0x7ffbbc37b767 
      16  QtPrivate::QSlotObject<void (__cdecl QmlJSTools::Internal::ModelManager:: *)(void) __ptr64,QtPrivate::List<>,void>::impl                          qobject_impl.h        121  0x7ffbbc38326e 
      17  QtPrivate::QSlotObjectBase::call                                                                                                                  qobject_impl.h        101  0x6cead848     
      18  QMetaObject::activate                                                                                                                             qobject.cpp           3754 0x6ce9c440     
      19  QMetaObject::activate                                                                                                                             qobject.cpp           3629 0x6ce9bd08     
      20  ProjectExplorer::SessionManager::startupProjectChanged                                                                                            moc_session.cpp       278  0x7ffb9078f7ee 
      ... <More>                                                                                                                                                                                      
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mabenell Marco Benelli
            omarhawk Carsten Schmidt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes