fix infinite loop on environment modify()

Task-number: QTCREATORBUG-18335
Change-Id: I9d92f4e85a86a7b498e80d206c5b9ef2d36a17f3
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>